--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Alexander Ruziska</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,149 +18,96 @@
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
-					<div id="intro">
-						<h1>This is<br />
-						Massively</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul>
-					</div>
+                <div id="intro">
+                    <h1>Welcome!</h1>
+                    <img src="images/20241102_151703.jpg" alt="" class="profile-image" />
+                    <p>A little bit about me.</p>
+                    <ul class="actions">
+                        <li><a href="#bio" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+                    </ul>
+                </div>
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">My Portfolio</a>
 					</header>
-
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
-						</ul>
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
-					</nav>
 
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
-								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
-								</ul>
-							</article>
+						<!-- Bio Section -->
+						<section id="bio" class="wrapper style3">
+							<div class="inner">
+								<h2>About Me</h2>
+								<p>I'm a full-stack software engineer with a passion for building innovative and efficient solutions. My tech stack includes Node.js, Express, React, PostgreSQL, C#, OpenAI, and more. I have experience working with Bootstrap, Zustand, CORS, BodyParser, HTML, CSS. Whether it's crafting seamless front-end experiences or optimizing back-end performance, I enjoy tackling challenges across the full stack.
+                                    Before diving into software engineering, I pursued my love for creativity by studying Art and Design emphasis in sculpture at MSUM. That background fuels my ability to approach development with an artistic and problem-solving mindset—building software isn’t just about code; it’s about design, structure, and user experience.
+                                    Outside of coding, you’ll find me doing house projects, rolling dice in Dungeons & Dragons, or immersed in the world of video games. Whether it's shaping digital landscapes or real-world art, I thrive on creating and bringing ideas to life.
+                                    Let’s build something awesome together!</p>
+							</div>
+						</section>
 
-						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-							</section>
-
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
+						<!-- Portfolio Section -->
+						<section class="posts">
+                            <article>
+                                <header>
+                                    <h2><a href="#">D&D Monster Generator
+                                    </a></h2>
+                                </header>
+                                <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+                                <p>Dungeons and Dragons Monster Generator description here</p>
+                                <ul class="actions special">
+                                    <li><a href="#" class="button">Full Story</a></li>
+                                </ul>
+                            </article>
+                            <article>
+                                <header>
+                                    <h2><a href="#">Fungus Fighter
+                                    </a></h2>
+                                </header>
+                                <a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+                                <p>Fungus Fighter Description</p>
+                                <ul class="actions special">
+                                    <li><a href="#" class="button">Full Story</a></li>
+                                </ul>
+                            </article>
+                            <article>
+                                <header>
+                                    <h2><a href="#">SQL ToDo List<br />
+                                    </a></h2>
+                                </header>
+                                <a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+                                <p>SQL ToDo List description</p>
+                                <ul class="actions special">
+                                    <li><a href="#" class="button">Full Story</a></li>
+                                </ul>
+                            </article>
+                            <article>
+                                <header>
+                                    <h2><a href="#">Client Project</a></h2>
+                                </header>
+                                <a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+                                <p>Client Project description</p>
+                                <ul class="actions special">
+                                    <li><a href="#" class="button">Full Story</a></li>
+                                </ul>
+                            </article>
+                            <!-- <article>
+                                <header>
+                                    <span class="date">April 11, 2017</span>
+                                    <h2><a href="#">Odio magna<br />
+                                    sed consectetur</a></h2>
+                                </header>
+                                <a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+                                <p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+                                <ul class="actions special">
+                                    <li><a href="#" class="button">Full Story</a></li>
+                                </ul>
+                            </article> -->
 
 					</div>
 
-				<!-- Footer -->
+				<!-- Contact Section -->
+					<!-- Footer -->
 					<footer id="footer">
 						<section>
 							<form method="post" action="#">
@@ -185,34 +132,30 @@
 						</section>
 						<section class="split contact">
 							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<h3>LinkedIn</h3>
+								<p>www.linkedin.com/in/alexander-ruziska
+                                </p>
 							</section>
 							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<h3>GitHub</h3>
+								<p><a href="#">https://github.com/Alexander-Ruziska</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">alexruziska@yahoo.com</a></p>
 							</section>
-							<section>
+							<!-- <section>
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
+								</ul> -->
 							</section>
 						</section>
 					</footer>
 
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
 
 			</div>
 
@@ -225,5 +168,8 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
+            <div id="copyright">
+                <ul><li>&copy; Alexander Ruziska 2025</li></ul>
+            </div>
 	</body>
 </html>
