added projects. Just need some links

--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
                                     <h2><a href="#">D&D Monster Generator
                                     </a></h2>
                                 </header>
-                                <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-                                <p>Dungeons and Dragons Monster Generator description here</p>
-                                <ul class="actions special">
+                                <a href="#" class="image fit"><img src="images/Screenshot 2025-03-17 at 12.23.58 PM.png" alt="" /></a>
+                                <p>A D&D app that creates original monsters for the user in the D&D 5e format using AI to generate an image and stat block based on what the user specifies.
                                     <li><a href="#" class="button">Full Story</a></li>
                                 </ul>
                             </article>
@@ -64,8 +63,8 @@
                                     <h2><a href="#">Fungus Fighter
                                     </a></h2>
                                 </header>
-                                <a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-                                <p>Fungus Fighter Description</p>
+                                <a href="#" class="image fit"><img src="images/demo.gif" alt="" /></a>
+                                <p>A fun little game where you click abilities to defeat the fungus monster at the same time learning about click events and state.</p>
                                 <ul class="actions special">
                                     <li><a href="#" class="button">Full Story</a></li>
                                 </ul>
@@ -75,8 +74,8 @@
                                     <h2><a href="#">SQL ToDo List<br />
                                     </a></h2>
                                 </header>
-                                <a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-                                <p>SQL ToDo List description</p>
+                                <a href="#" class="image fit"><img src="images/Screenshot 2025-03-17 at 1.03.54 PM.png" alt="" /></a>
+                                <p>A ToDo List where a user can add and delete tasks and mark them as complete or incomplete. Also was experimenting with bootstrap templates here.</p>
                                 <ul class="actions special">
                                     <li><a href="#" class="button">Full Story</a></li>
                                 </ul>
@@ -86,7 +85,7 @@
                                     <h2><a href="#">Client Project</a></h2>
                                 </header>
                                 <a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-                                <p>Client Project description</p>
+                                <p>Cooming soon</p>
                                 <ul class="actions special">
                                     <li><a href="#" class="button">Full Story</a></li>
                                 </ul>
