added links to github

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 </header>
                                 <a href="#" class="image fit"><img src="images/Screenshot 2025-03-17 at 12.23.58 PM.png" alt="" /></a>
                                 <p>A D&D app that creates original monsters for the user in the D&D 5e format using AI to generate an image and stat block based on what the user specifies.
-                                    <li><a href="#" class="button">Full Story</a></li>
+                                    <li><a href="https://github.com/Alexander-Ruziska/eda-solo-project-2025" class="button">GitHub Repo</a></li>
                                 </ul>
                             </article>
                             <article>
@@ -66,7 +66,7 @@
                                 <a href="#" class="image fit"><img src="images/demo.gif" alt="" /></a>
                                 <p>A fun little game where you click abilities to defeat the fungus monster at the same time learning about click events and state.</p>
                                 <ul class="actions special">
-                                    <li><a href="#" class="button">Full Story</a></li>
+                                    <li><a href="https://github.com/Alexander-Ruziska/javascript-fungus-fighter" class="button">GitHub Repo</a></li>
                                 </ul>
                             </article>
                             <article>
@@ -77,7 +77,7 @@
                                 <a href="#" class="image fit"><img src="images/Screenshot 2025-03-17 at 1.03.54 PM.png" alt="" /></a>
                                 <p>A ToDo List where a user can add and delete tasks and mark them as complete or incomplete. Also was experimenting with bootstrap templates here.</p>
                                 <ul class="actions special">
-                                    <li><a href="#" class="button">Full Story</a></li>
+                                    <li><a href="https://github.com/Alexander-Ruziska/weekend-sql-to-do-list-public-" class="button">GitHub Repo</a></li>
                                 </ul>
                             </article>
                             <article>
@@ -87,7 +87,7 @@
                                 <a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
                                 <p>Cooming soon</p>
                                 <ul class="actions special">
-                                    <li><a href="#" class="button">Full Story</a></li>
+                                    <li><a href="#" class="button">GitHub Repo</a></li>
                                 </ul>
                             </article>
                             <!-- <article>
