--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<section id="bio" class="wrapper style3">
 							<div class="inner">
 								<h2>About Me</h2>
-								<p>I'm a full-stack software engineer with a passion for building innovative and efficient solutions. My tech stack includes Node.js, Express, React, PostgreSQL, C#, OpenAI, and more. I have experience working with Bootstrap, Zustand, CORS, BodyParser, HTML, CSS. Whether it's crafting seamless front-end experiences or optimizing back-end performance, I enjoy tackling challenges across the full stack.
+								<p>I'm a full-stack software engineer with a passion for building innovative and efficient solutions. My tech stack includes Node.js, Express, React, Vite, Neon, PostgreSQL, C#, OpenAI, JS, Bootstrap, Zustand, CORS, BodyParser, HTML, CSS fly.io, and Cloudinary amoung others. Whether it's crafting seamless front-end experiences or optimizing back-end performance, I enjoy tackling challenges across the full stack.
                                     Before diving into software engineering, I pursued my love for creativity by studying Art and Design emphasis in sculpture at MSUM. That background fuels my ability to approach development with an artistic and problem-solving mindset—building software isn’t just about code; it’s about design, structure, and user experience.
                                     Outside of coding, you’ll find me doing house projects, rolling dice in Dungeons & Dragons, or immersed in the world of video games. Whether it's shaping digital landscapes or real-world art, I thrive on creating and bringing ideas to life.
                                     Let’s build something awesome together!</p>
@@ -48,13 +48,14 @@
 
 						<!-- Portfolio Section -->
 						<section class="posts">
-                            <article>
+							<article>
                                 <header>
                                     <h2><a href="#">D&D Monster Generator
                                     </a></h2>
                                 </header>
                                 <a href="#" class="image fit"><img src="images/Screenshot 2025-03-17 at 12.23.58 PM.png" alt="" /></a>
-                                <p>A D&D app that creates original monsters for the user in the D&D 5e format using AI to generate an image and stat block based on what the user specifies.
+                                <p>A D&D app that creates original monsters for the user in the D&D 5e format using AI to generate an image and stat block based on what the user specifies.</p>
+                                <ul class="actions special">
                                     <li><a href="https://github.com/Alexander-Ruziska/eda-solo-project-2025" class="button">GitHub Repo</a></li>
                                 </ul>
                             </article>
