--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 
 				<!-- Intro -->
                 <div id="intro">
-                    <h1>Welcome!</h1>
+                    <h1 style="margin-bottom: 40px;">Welcome!</h1>
                     <img src="images/20241102_151703.jpg" alt="" class="profile-image" />
-                    <p>A little bit about me.</p>
+                    <p style="margin-bottom: 0px;">Alexander Ruziska </p>
+					<p style="margin-top: 0px;">Full-Stack Software Engineer</p>
                     <ul class="actions">
                         <li><a href="#bio" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
                     </ul>
