--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<section id="bio" class="wrapper style3">
 							<div class="inner">
 								<h2>About Me</h2>
-								<p>I'm a full-stack software engineer with a passion for building innovative and efficient solutions. My tech stack includes Node.js, Express, React, Vite, Neon, PostgreSQL, C#, OpenAI, JS, Bootstrap, Zustand, CORS, BodyParser, HTML, CSS fly.io, and Cloudinary amoung others. Whether it's crafting seamless front-end experiences or optimizing back-end performance, I enjoy tackling challenges across the full stack.
+								<p>I'm a full-stack software engineer with a passion for building innovative and efficient solutions. My tech stack includes Node.js, Express, React, Vite, Neon, PostgreSQL, C#, OpenAI, JS, Bootstrap, Zustand, CORS, BodyParser, HTML, CSS fly.io, and Cloudinary among others. Whether it's crafting seamless front-end experiences or optimizing back-end performance, I enjoy tackling challenges across the full stack.
                                     Before diving into software engineering, I pursued my love for creativity by studying Art and Design emphasis in sculpture at MSUM. That background fuels my ability to approach development with an artistic and problem-solving mindset—building software isn’t just about code; it’s about design, structure, and user experience.
                                     Outside of coding, you’ll find me doing house projects, rolling dice in Dungeons & Dragons, or immersed in the world of video games. Whether it's shaping digital landscapes or real-world art, I thrive on creating and bringing ideas to life.
                                     Let’s build something awesome together!</p>
