--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
                             </article>
                             <article>
                                 <header>
-                                    <h2><a href="#">Client Project</a></h2>
+                                    <h2><a href="#">Art Connect</a></h2>
                                 </header>
-                                <a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+                                <a href="#" class="image fit"><img src="images/Screenshot 2025-04-09 at 2.45.32 PM.png" alt="" /></a>
                                 <p>Cooming soon</p>
                                 <ul class="actions special">
-                                    <li><a href="#" class="button">GitHub Repo</a></li>
+                                    <li><a href="https://github.com/Alexander-Ruziska/Art-Connect" class="button">GitHub Repo</a></li>
                                 </ul>
                             </article>
                             <!-- <article>
