--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                     <h2><a href="#">Art Connect</a></h2>
                                 </header>
                                 <a href="#" class="image fit"><img src="images/Screenshot 2025-04-09 at 2.45.32 PM.png" alt="" /></a>
-                                <p>An Artist and Organization Hub for collabortaion and sharing work.</p>
+                                <p>An Artist and Organization Hub for collabortaion and sharing work. This was a client project for James Bergman and FM Wellness Collective.</p>
                                 <ul class="actions special">
                                     <li><a href="https://github.com/Alexander-Ruziska/Art-Connect" class="button">GitHub Repo</a></li>
                                 </ul>
