--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>LinkedIn</h3>
-								<p>www.linkedin.com/in/alexander-ruziska
-                                </p>
+								<p><a href="#">www.linkedin.com/in/alexander-ruziska</a></p>
 							</section>
 							<section>
 								<h3>GitHub</h3>
