--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="#">
+							<!-- <form method="post" action="#">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -129,12 +129,12 @@
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
-							</form>
+							</form> -->
 						</section>
 						<section class="split contact">
 							<section class="alt">
 								<h3>LinkedIn</h3>
-								<p><a href="#">www.linkedin.com/in/alexander-ruziska</a></p>
+								<p><a href="#">www.linkedin.com/in/alexander-ruziska  </a></p>
 							</section>
 							<section>
 								<h3>GitHub</h3>
