--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 						<section class="posts">
 							<article>
                                 <header>
-                                    <h2><a href="#">D&D Monster Generator
-                                    </a></h2>
+                                    <h2>D&D Monster Generator</h2>
                                 </header>
                                 <a href="#" class="image fit"><img src="images/Screenshot 2025-03-17 at 12.23.58 PM.png" alt="" /></a>
                                 <p>A D&D app that creates original monsters for the user in the D&D 5e format using AI to generate an image and stat block based on what the user specifies.</p>
@@ -62,19 +61,17 @@
                             </article>
                             <article>
                                 <header>
-                                    <h2><a href="#">Fungus Fighter
-                                    </a></h2>
+                                    <h2 style="margin-bottom: 40px;">Fungus Fighter</h2>
                                 </header>
                                 <a href="#" class="image fit"><img src="images/demo.gif" alt="" /></a>
-                                <p>A fun little game where you click abilities to defeat the fungus monster at the same time learning about click events and state.</p>
+                                <p style="margin-bottom: 42px;">A fun little game where you click abilities to defeat the fungus monster at the same time learning about click events and state.</p>
                                 <ul class="actions special">
                                     <li><a href="https://github.com/Alexander-Ruziska/javascript-fungus-fighter" class="button">GitHub Repo</a></li>
                                 </ul>
                             </article>
                             <article>
                                 <header>
-                                    <h2><a href="#">SQL ToDo List<br />
-                                    </a></h2>
+                                    <h2>SQL ToDo List</h2>
                                 </header>
                                 <a href="#" class="image fit"><img src="images/Screenshot 2025-03-17 at 1.03.54 PM.png" alt="" /></a>
                                 <p>A ToDo List where a user can add and delete tasks and mark them as complete or incomplete. Also was experimenting with bootstrap templates here.</p>
@@ -84,9 +81,9 @@
                             </article>
                             <article>
                                 <header>
-                                    <h2><a href="#">Art Connect</a></h2>
+                                    <h2>Art Connect</h2>
                                 </header>
-                                <a href="#" class="image fit"><img src="images/Screenshot 2025-04-09 at 2.45.32 PM.png" alt="" /></a>
+                                <a href="#" class="image fit"><img src="images/Screenshot 2025-04-09 at 2.45.32 PM.png" alt="" style="margin-bottom: 17px;" /></a>
                                 <p>An Artist and Organization Hub for collabortaion and sharing work. This was a client project for James Bergman and FM Wellness Collective.</p>
                                 <ul class="actions special">
                                     <li><a href="https://github.com/Alexander-Ruziska/Art-Connect" class="button">GitHub Repo</a></li>
@@ -130,9 +127,9 @@
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form> -->
-						</section>
+						<!-- </section>
 						<section class="split contact">
-							<section class="alt">
+							<section class="alt"> -->
 								<h3>LinkedIn</h3>
 								<p><a href="#">www.linkedin.com/in/alexander-ruziska  </a></p>
 							</section>
