--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					</div>
 
 					<footer id="footer">
-						<section>
+						<!-- <section> -->
 							<!-- <form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -115,19 +115,20 @@
 								</ul>
 							</form> -->
 						<!-- </section>
-						<section class="split contact">
-							<section class="alt"> -->
+						<section class="split contact"> -->
+							<section>
 								<h3>LinkedIn</h3>
-								<p><a href="#">www.linkedin.com/in/alexander-ruziska  </a></p>
-							</section>
-							<section>
+								<p><a href="https://www.linkedin.com/in/alexander-ruziska" target="_blank">www.linkedin.com/in/alexander-ruziska</a></p>
+							  </section>
+							  <section>
 								<h3>GitHub</h3>
-								<p><a href="#">https://github.com/Alexander-Ruziska</a></p>
-							</section>
-							<section>
+								<p><a href="https://github.com/Alexander-Ruziska" target="_blank">https://github.com/Alexander-Ruziska</a></p>
+							  </section>
+							  <section>
 								<h3>Email</h3>
-								<p><a href="#">alexruziska@yahoo.com</a></p>
-							</section>
+								<p><a href="mailto:alexruziska@yahoo.com">alexruziska@yahoo.com</a></p>
+							  </section>							  
+
 							<!-- <section>
 								<h3>Social</h3>
 								<ul class="icons alt">
