updating app link

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 						<section class="posts">
 							<article>
                                 <header>
-                                    <h2>D&D Monster Generator</h2>
+                                    <h2>FableSpire</h2>
                                 </header>
-                                <a href="#" class="image fit"><img src="images/Screenshot 2025-03-17 at 12.23.58 PM.png" alt="" /></a>
-                                <p>A D&D app that creates original monsters for the user in the D&D 5e format using AI to generate an image and stat block based on what the user specifies.</p>
+                                <a href="#" class="image fit"><img src="images/Screenshot 2025-03-17 at 12.23.58 PM.png" alt="" /></a>
+                                <p>FableSpire creates original monsters for the user in the D&D 5e format using AI to generate an image and stat block based on what the user specifies.</p>
                                 <ul class="actions special">
-                                    <li><a href="https://github.com/Alexander-Ruziska/eda-solo-project-2025" class="button">GitHub Repo</a></li>
+                                    <li><a href="https://fablespire.fly.dev/#/registration" class="button">Live App</a></li>
                                 </ul>
                             </article>
                             <article>
