Update FableSpire project with new image and fix image display issues

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <header>
                                     <h2>FableSpire</h2>
                                 </header>
-                                <a href="#" class="image fit"><img src="images/Screenshot 2025-03-17 at 12.23.58 PM.png" alt="" /></a>
+                                <a href="https://fablespire.fly.dev/#/registration" class="image fit"><img src="images/fablespire-screenshot.png" alt="" /></a>
                                 <p>FableSpire creates original monsters for the user in the D&D 5e format using AI to generate an image and stat block based on what the user specifies.</p>
                                 <ul class="actions special">
                                     <li><a href="https://fablespire.fly.dev/#/registration" class="button">Live App</a></li>
