Add GitHub repo button for FableSpire project

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                                 <p>FableSpire creates original monsters for the user in the D&D 5e format using AI to generate an image and stat block based on what the user specifies.</p>
                                 <ul class="actions special">
                                     <li><a href="https://fablespire.fly.dev/#/registration" class="button">Live App</a></li>
+                                    <li><a href="https://github.com/Alexander-Ruziska/FableSpire/tree/main" class="button">GitHub Repo</a></li>
                                 </ul>
                             </article>
                             <article>
