updating app links

--- a/index.html
+++ b/index.html
@@ -51,32 +51,34 @@
                             </article>
                             <article>
                                 <header>
+                                    <h2>Art Connect</h2>
+                                </header>
+                                <a href="#" class="image fit"><img src="images/art-connect-screenshot.png" alt="" /></a>
+                                <p style="margin-top: -7px;">An Artist and Organization Hub for collabortaion and sharing work. This was a client project for James Bergman and FM Wellness Collective.</p>
+                                <ul class="actions special">
+                                    <!-- <li><a href="#" class="button">Live App</a></li> -->
+                                    <li><a href="https://github.com/Alexander-Ruziska/Art-Connect" class="button">GitHub Repo</a></li>
+                                </ul>
+                            </article>
+                            <article>
+                                <header>
+                                    <h2>Gains Go Brr</h2>
+                                </header>
+                                <a href="#" class="image fit"><img src="images/gains-go-brr-screenshot.png" alt="" /></a>
+                                <p>Gains Go Brr tracks workouts, allows users to create custom training programs, and automatically calculates progressive overload increases to maximize strength gains over time.</p>
+                                <ul class="actions special">
+                                    <li><a href="https://gains-go-brr.fly.dev/register" class="button">Live App</a></li>
+                                    <li><a href="https://github.com/Alexander-Ruziska/Gains_Go_Brr" class="button">GitHub Repo</a></li>
+                                </ul>
+                            </article>
+                            <article>
+                                <header>
                                     <h2 style="margin-bottom: 40px;">Fungus Fighter</h2>
                                 </header>
                                 <a href="#" class="image fit"><img src="images/demo.gif" alt="" /></a>
                                 <p style="margin-bottom: 42px;">A fun little game where you click abilities to defeat the fungus monster at the same time learning about click events and state.</p>
                                 <ul class="actions special">
                                     <li><a href="https://github.com/Alexander-Ruziska/javascript-fungus-fighter" class="button">GitHub Repo</a></li>
-                                </ul>
-                            </article>
-                            <article>
-                                <header>
-                                    <h2>SQL ToDo List</h2>
-                                </header>
-                                <a href="#" class="image fit"><img src="images/Screenshot 2025-03-17 at 1.03.54 PM.png" alt="" /></a>
-                                <p>A ToDo List where a user can add and delete tasks and mark them as complete or incomplete. Also was experimenting with bootstrap templates here.</p>
-                                <ul class="actions special">
-                                    <li><a href="https://github.com/Alexander-Ruziska/weekend-sql-to-do-list-public-" class="button">GitHub Repo</a></li>
-                                </ul>
-                            </article>
-                            <article>
-                                <header>
-                                    <h2>Art Connect</h2>
-                                </header>
-                                <a href="#" class="image fit"><img src="images/Screenshot 2025-04-09 at 2.45.32 PM.png" alt="" style="margin-bottom: 17px;" /></a>
-                                <p>An Artist and Organization Hub for collabortaion and sharing work. This was a client project for James Bergman and FM Wellness Collective.</p>
-                                <ul class="actions special">
-                                    <li><a href="https://github.com/Alexander-Ruziska/Art-Connect" class="button">GitHub Repo</a></li>
                                 </ul>
                             </article>
                             <!-- <article>
