--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 <a href="#" class="image fit"><img src="images/art-connect-screenshot.png" alt="" /></a>
                                 <p style="margin-top: -7px;">An Artist and Organization Hub for collabortaion and sharing work. This was a client project for James Bergman and FM Wellness Collective.</p>
                                 <ul class="actions special">
-                                    <!-- <li><a href="#" class="button">Live App</a></li> -->
+                                    <li><a href="https://art-connect-fmwellness.fly.dev/#/" class="button">Live App</a></li>
                                     <li><a href="https://github.com/Alexander-Ruziska/Art-Connect" class="button">GitHub Repo</a></li>
                                 </ul>
                             </article>
